5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1764_2390.log
== TEST (2019-05-29 23:07:35) 
-- CODE:
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = arange(size(vetor1), numpy=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1
	
print(novovet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:08:12) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), numpy=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1
	
print(novovet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:10:41) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1
	
print(novovet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:11:51) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1
	
print(max(novovet))
	
-- EXECUTION TIME:
0.343401
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
95
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
86
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:12:01) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1
	
print(max(novovet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:13:37) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1
novovet[i] = max(novovet)
print(novovet[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:13:51) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1
novovet[i] = max(novovet)
print(novovet[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:14:34) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1

print(max(novovet[i]))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:15:40) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	i = i +1

print(max(novovet[i]))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:19:11) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0
mes = 1
novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		mes = mes - 1
	i = i +1
	

print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:21:29) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0
mes = 1
novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		mes = mes - 1
	else:
		mes = mes + 1
	i = i +1
	

print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:25:42) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0
mes = 1
novovet = zeros(size(vetor1), dtype=int)
maior = max(novovet)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]

	i = i +1
	if(novovet[i]==maior):
		maior = novovet[i-1]

print(maior)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:26:20) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0
mes = 1
novovet = zeros(size(vetor1), dtype=int)
maior = max(novovet)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]

	i = i +1
	if(novovet[i]==maior):
		maior = novovet[i]

print(maior)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:27:56) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		mes = i - 1
	i = i +1
	

print(max(novovet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:28:52) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		mes = i - 1
	i = i +1
	

print((novovet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:31:29) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i
	i = i +1
	

print((novovet))
print(maior)
	
-- EXECUTION TIME:
0.611205
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[ 5 14 23 32 41 50 59 68 77 86 95  0]
10
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[ 5 14 23 32 41 50 59 68 77 86  0  0]
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:31:32) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i
	i = i +1
	

print((novovet))
print(maior)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:31:52) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i
	i = i +1
	

print(novovet[maior])
	
-- EXECUTION TIME:
0.640664
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
95
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
86
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:31:55) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i
	i = i +1
	

print(novovet[maior])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:33:45) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i
	i = i +1
	

print(maior)
	
-- EXECUTION TIME:
0.439871
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:49) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i
	i = i +1
	

print(maior)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:34:31) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i+
	i = i +1
	

print(maior)
	
-- EXECUTION TIME:
0.146465
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 10
    maior = i+
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:34:40) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i+
	i = i +1
	

print(maior)
	
-- ERROR:
File "XXXX", line 10
    maior = i+
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:34:52) 
-- CODE:
from numpy import *
vetor1 = array(eval(input()))
vetor2 = array(eval(input()))
i = 0

novovet = zeros(size(vetor1), dtype=int)
while(i<size(vetor1)):
	novovet[i] = vetor1[i] - vetor2[i]
	if(max(novovet)==novovet[i]):
		maior = i+1
	i = i +1
	

print(maior)
	
-- EXECUTION TIME:
0.408238
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
